# TinyReguMath3D

./: .gitignore  CMakeLists.txt  README.md
examples/: main.cpp
src/: TinyReguMath3D.hpp  aabb2.hpp  aabb3.hpp  cg.hpp  fastmath.hpp  io.hpp  mat3.hpp  mat4.hpp  transform.hpp  vec2.hpp  vec3.hpp  vec4.hpp
